Final commit of Swagger API stuff
